testsuite/tests/deriving/should_fail/T7148.stderr

T7148.hs:27:40: error:
    • Occurs check: cannot construct the infinite type: b ~ Tagged a b
        arising from the coercion of the method ‘iso2’
          from type ‘forall b1. SameType b1 () -> SameType b1 b’
            to type ‘forall b1. SameType b1 () -> SameType b1 (Tagged a b)’
    • When deriving the instance for (IsoUnit (Tagged a b))

T7148.hs:27:40: error:
    • Occurs check: cannot construct the infinite type: b ~ Tagged a b
        arising from the coercion of the method ‘iso1’
          from type ‘forall b1. SameType () b1 -> SameType b b1’
            to type ‘forall b1. SameType () b1 -> SameType (Tagged a b) b1’
    • When deriving the instance for (IsoUnit (Tagged a b))
